--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     </title>
 </head>
 <body>
-
+    <div>
+        <h1>Todo List</h1>
+        <input id='todo' type='text' placeholder='Add Todo' />
+        <button id='todoButton'>Add Todo</button>
+        <ul id='todos'></ul>
+    </div>
+    <div>
+        <h1>Goal List</h1>
+        <input id='goal' type='text' placeholder='Add Goal' />
+        <button id='goalButton'>Add Goal</button>
+        <ul id='goals'></ul>
+    </div>
     <script src='index.js'></script>
 </body>
 </html>
