--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>
         Udacity Todos Goals
     </title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
 </head>
 <body>
     <div>
