Add commentDidMount to class App.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 return (
                     <div>
                         <h1>Todo List</h1>
-                        <input 
+                        <input
                             type='text'
                             placeholder='Add Todo'
                             ref={input => this.input = input}
@@ -75,11 +75,12 @@
                     name,
                     id: generateId()
                 }))
+            }
             render() {
                 return (
                     <div>
                         <h1>Goal List</h1>
-                        <input 
+                        <input
                             type='text'
                             placeholder='Add Goal'
                             ref={input => this.input = input}
@@ -92,11 +93,19 @@
         }
 
         class App extends React.Component {
+            componentDidMount() {
+                const { store } = this.props
+                
+                store.subscribe(() => this.forceUpdate())
+            }
             render() {
+                 const { store } = this.props;
+                 const { todos, goals } = store.getState();
+
                 return (
                     <div>
-                        <Todos store={this.props.store} />
-                        <Goals store={this.props.store}/>
+                        <Todos todos={todos} store={this.props.store} />
+                        <Goals goals={goals} store={this.props.store}/>
                     </div>
                 )
             }
