Feat: Add remove button.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
         function List (props) {
             return (
                 <ul>
-                    <li>LIST</li>
+                    {props.items.map(item => (
+                        <li key={item.id}>
+                            <span>{item.name}</span>
+                            <button onClick={() => props.remove(item)}>
+                                X
+                            </button>
+                        </li>
+                    ))}
                 </ul>
             )
         }
@@ -48,6 +55,11 @@
                     id: generateId()
                 }))
             }
+
+            removeItem = todo => {
+                this.props.store.dispatch(removeTodoAction(todo.id))
+            }
+
             render() {
                 return (
                     <div>
@@ -59,7 +71,10 @@
                         />
                         <button onClick={this.addItem}>Add Todo</button>
 
-                        <List />
+                        <List
+                            items={this.props.todos}
+                            remove={this.removeItem}
+                        />
                     </div>
                 )
             }
@@ -76,6 +91,11 @@
                     id: generateId()
                 }))
             }
+
+            removeItem = goal => {
+                this.props.store.dispatch(removeGoalAction(goal.id))
+            }
+
             render() {
                 return (
                     <div>
@@ -86,7 +106,10 @@
                             ref={input => this.input = input}
                         />
                         <button onClick={this.addItem}>Add Goal</button>
-                        <List />
+                        <List
+                            items={this.props.goals}
+                            remove={this.removeItem}
+                        />
                     </div>
                 )
             }
@@ -96,6 +119,7 @@
             componentDidMount() {
                 const { store } = this.props
                 
+                // Re-render whenever the store changes.
                 store.subscribe(() => this.forceUpdate())
             }
             render() {
