Feat: Add toggleItem.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
-    <div>
+    <!-- <div>
         <h1>Todo List</h1>
         <input id='todo' type='text' placeholder='Add Todo' />
         <button id='todoButton'>Add Todo</button>
@@ -23,7 +23,7 @@
         <ul id='goals'></ul>
     </div>
 
-    <hr />
+    <hr /> -->
     <div id='app'></div>
 
     <script src='index.js'></script>
@@ -33,7 +33,12 @@
                 <ul>
                     {props.items.map(item => (
                         <li key={item.id}>
-                            <span>{item.name}</span>
+                            <span
+                                onClick={() => props.toggle && props.toggle(item.id)}
+                                style={{textDecoration: item.complete ? 'line-through' : 'none'}}
+                            >
+                                {item.name}
+                            </span>
                             <button onClick={() => props.remove(item)}>
                                 X
                             </button>
@@ -60,6 +65,10 @@
                 this.props.store.dispatch(removeTodoAction(todo.id))
             }
 
+            toggleItem = id => {
+                this.props.store.dispatch(toggleTodoAction(id))
+            }
+
             render() {
                 return (
                     <div>
@@ -74,6 +83,7 @@
                         <List
                             items={this.props.todos}
                             remove={this.removeItem}
+                            toggle={this.toggleItem}
                         />
                     </div>
                 )
