--- a/index.html
+++ b/index.html
@@ -115,10 +115,19 @@
         class App extends React.Component {
             componentDidMount() {
                 const { store } = this.props
-                
+
+                Promise.all([
+                    API.fetchTodos(),
+                    API.fetchGoals()
+                ]).then(([todos, goals]) => {
+                    console.log("Todos: ", todos)
+                    console.log("Goals: ", goals)
+                })
+            
                 // Re-render whenever the store changes.
                 store.subscribe(() => this.forceUpdate())
             }
+
             render() {
                  const { store } = this.props;
                  const { todos, goals } = store.getState();
