Feat: Add new action creator - receiveDataAction.

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
                     API.fetchTodos(),
                     API.fetchGoals()
                 ]).then(([todos, goals]) => {
-                    console.log("Todos: ", todos)
-                    console.log("Goals: ", goals)
+                    store.dispatch(receiveDataAction(todos, goals))
                 })
             
                 // Re-render whenever the store changes.
