--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@
 
             render() {
                  const { store } = this.props;
-                 const { todos, goals } = store.getState();
+                 const { todos, goals, loading } = store.getState();
 
+                 if (loading) {
+                    return <h3>Loading</h3>
+                 }
                 return (
                     <div>
                         <Todos todos={todos} store={this.props.store} />
