--- a/index.html
+++ b/index.html
@@ -48,12 +48,25 @@
                 }))
             }
 
+            // Update both API and store
             removeItem = todo => {
                 this.props.store.dispatch(removeTodoAction(todo.id))
+
+                return API.deleteTodo(todo.id)
+                    .catch(() => {
+                        this.props.store.dispatch(addTodoAction(todo))
+                        alert("An error occurred. Try again.")
+                    })
             }
 
             toggleItem = id => {
                 this.props.store.dispatch(toggleTodoAction(id))
+
+                return  API.saveTodoToggle(id)
+                    .catch(() => {
+                            this.props.store.dispatch(toggleTodoAction(id))
+                            alert("An error occurred. Try again.")
+                        })
             }
 
             render() {
@@ -91,6 +104,12 @@
 
             removeItem = goal => {
                 this.props.store.dispatch(removeGoalAction(goal.id))
+
+                return API.deleteGoal(goal.id)
+                    .catch(() => {
+                        this.props.store.dispatch(addGoalAction(goal))
+                        alert("An error occurred. Try again.")
+                    })
             }
 
             render() {
