--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         class Todos extends React.Component {
             addItem = event => {
                 event.preventDefault();
-                const name = this.input.value;
-                this.input.value = '';
 
-                this.props.store.dispatch(addTodoAction({
-                    name,
-                    complete: false,
-                    id: generateId()
-                }))
+                return API.saveTodo(this.input.value)
+                    .then(todo => {
+                        this.props.store.dispatch(addTodoAction(todo))
+                        this.input.value = '';
+                    }).catch(() => {
+                        alert("An error occurred. Try again.")
+                    })
             }
 
             // Update both API and store
@@ -93,13 +93,14 @@
         class Goals extends React.Component {
             addItem = event => {
                 event.preventDefault();
-                const name = this.input.value;
-                this.input.value = '';
 
-                this.props.store.dispatch(addGoalAction({
-                    name,
-                    id: generateId()
-                }))
+                return API.saveGoal(this.input.value)
+                    .then(goal => {
+                        this.props.store.dispatch(addGoalAction(goal))
+                        this.input.value = '';
+                    }).catch(() => {
+                        alert("An error occurred. Try again.")
+                    })
             }
 
             removeItem = goal => {
