Feat: Separate UI and fetching data using Redux-thunk.

--- a/index.html
+++ b/index.html
@@ -51,13 +51,7 @@
 
             // Update both API and store
             removeItem = todo => {
-                this.props.store.dispatch(removeTodoAction(todo.id))
-
-                return API.deleteTodo(todo.id)
-                    .catch(() => {
-                        this.props.store.dispatch(addTodoAction(todo))
-                        alert("An error occurred. Try again.")
-                    })
+                this.props.store.dispatch(handleDeleteTodo(todo))
             }
 
             toggleItem = id => {
