--- a/index.html
+++ b/index.html
@@ -88,24 +88,14 @@
         class Goals extends React.Component {
             addItem = event => {
                 event.preventDefault();
-
-                return API.saveGoal(this.input.value)
-                    .then(goal => {
-                        this.props.store.dispatch(addGoalAction(goal))
-                        this.input.value = '';
-                    }).catch(() => {
-                        alert("An error occurred. Try again.")
-                    })
+                this.props.store.dispatch(handleAddGoal(
+                    this.input.value,
+                    () => this.input.value = ''
+                ))
             }
 
             removeItem = goal => {
-                this.props.store.dispatch(removeGoalAction(goal.id))
-
-                return API.deleteGoal(goal.id)
-                    .catch(() => {
-                        this.props.store.dispatch(addGoalAction(goal))
-                        alert("An error occurred. Try again.")
-                    })
+                this.props.store.dispatch(handleDeleteGoal(goal))
             }
 
             render() {
