--- a/index.html
+++ b/index.html
@@ -51,13 +51,7 @@
             }
 
             toggleItem = id => {
-                this.props.store.dispatch(toggleTodoAction(id))
-
-                return  API.saveTodoToggle(id)
-                    .catch(() => {
-                            this.props.store.dispatch(toggleTodoAction(id))
-                            alert("An error occurred. Try again.")
-                        })
+                this.props.store.dispatch(handleToggleTodo(id))
             }
 
             render() {
