Fix: Fix syntax error.

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             render() {
                 return (
                     <Context.Consumer>
-                        {store => (
+                        {store => {
                             const { todos } = store.getState();
                             return <Todos todos={todos} dispatch={store.dispatch} />
-                        )}
+                        }}
                     </Context.Consumer>
                 )
             }
@@ -126,10 +126,10 @@
             render() {
                 return (
                     <Context.Consumer>
-                        {store => (
+                        {store => {
                             const { goals } = store.getState();
                             return <Goals goals={goals} dispatch={store.dispatch} />
-                        )}
+                        }}
                     </Context.Consumer>
                 )
             }
