Feat: Add connected function.

--- a/index.html
+++ b/index.html
@@ -75,19 +75,10 @@
             }
         }
 
-        // Context API
-        class ConnectedTodos extends React.Component {
-            render() {
-                return (
-                    <Context.Consumer>
-                        {store => {
-                            const { todos } = store.getState();
-                            return <Todos todos={todos} dispatch={store.dispatch} />
-                        }}
-                    </Context.Consumer>
-                )
-            }
-        }
+        const connectedTodos = connect(state => ({
+            todos: state.todos
+        }))(Todos);
+
 
         class Goals extends React.Component {
             addItem = event => {
@@ -121,36 +112,20 @@
             }
         }
 
-        // Context API
-        class ConnectedGoals extends React.Component {
-            render() {
-                return (
-                    <Context.Consumer>
-                        {store => {
-                            const { goals } = store.getState();
-                            return <Goals goals={goals} dispatch={store.dispatch} />
-                        }}
-                    </Context.Consumer>
-                )
-            }
-        }
+        const connectedGoals = connect(state => ({
+            goals: state.goals
+        }))(Goals);
 
 
         class App extends React.Component {
             componentDidMount() {
-                const { store } = this.props
+                const { dispatch } = this.props
 
-                store.dispatch(handleInitialData())
-                
-                // Re-render whenever the store changes.
-                store.subscribe(() => this.forceUpdate())
+                dispatch(handleInitialData())
             }
 
             render() {
-                 const { store } = this.props;
-                 const { loading } = store.getState();
-
-                 if (loading) {
+                 if (this.props.loading === true) {
                     return <h3>Loading</h3>
                  }
                 return (
@@ -162,17 +137,9 @@
             }
         }
 
-        class ConnectedApp extends React.Component {
-            render() {
-                return (
-                    <Context.Consumer>
-                        {store => (
-                            <App store={store} />
-                        )}
-                    </Context.Consumer>
-                )
-            }
-        }
+        const ConnectedApp = connect(state => ({
+            loading: state.loading
+        }))(App);
 
         const Context = React.createContext();
 
