--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         }
 
         const connectedTodos = connect(state => ({
-            todos: state.todos
+            todos: state.todos,
         }))(Todos);
 
 
@@ -113,19 +113,19 @@
         }
 
         const connectedGoals = connect(state => ({
-            goals: state.goals
+            goals: state.goals,
         }))(Goals);
 
 
         class App extends React.Component {
             componentDidMount() {
-                const { dispatch } = this.props
+                const { dispatch } = this.props;
 
-                dispatch(handleInitialData())
+                dispatch(handleInitialData());
             }
 
             render() {
-                 if (this.props.loading === true) {
+                 if (this.props.loading) {
                     return <h3>Loading</h3>
                  }
                 return (
@@ -138,7 +138,7 @@
         }
 
         const ConnectedApp = connect(state => ({
-            loading: state.loading
+            loading: state.loading,
         }))(App);
 
         const Context = React.createContext();
