--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             }
         }
 
-        const ConnectedTodos = connect(state => ({
+        const ConnectedTodos = ReactRedux.connect(state => ({
             todos: state.todos,
         }))(Todos);
 
@@ -111,7 +111,7 @@
             }
         }
 
-        const ConnectedGoals = connect(state => ({
+        const ConnectedGoals = ReactRedux.connect(state => ({
             goals: state.goals,
         }))(Goals);
 
@@ -136,59 +136,14 @@
             }
         }
 
-        const ConnectedApp = connect(state => ({
+        const ConnectedApp = ReactRedux.connect(state => ({
             loading: state.loading,
         }))(App);
 
-        function connect(mapStateToProps) {
-            return Component => {
-                class Receiver extends React.Component {
-                    componentDidMount() {
-                        const {subscribe } = this.props.store;
-                        this.unsubscribe = subscribe(() => {
-                            this.forceUpdate();
-                        })
-                    }
-                    componentWillUnmount() {
-                        this.unsubscribe();
-                    }
-                    render() {
-                        const { dispatch, getState } = this.props.store;
-                        const state = getState()
-                        const stateNeeded = mapStateToProps(state);
-                        return <Component {...stateNeeded} dispatch={dispatch} />
-                    }
-                }
-                
-                class ConnectedComponent extends React.Component {
-                    render() {
-                        return (
-                            <Context.Consumer>
-                                {store => <Receiver store={store} />}
-                            </Context.Consumer>
-                        );
-                    }
-                }
-                return ConnectedComponent
-            }
-        }
-
-        const Context = React.createContext();
-
-        class Provider extends React.Component {
-            render () {
-                return (
-                    <Context.Provider value={this.props.store}>
-                        {this.props.children}
-                    </Context.Provider>
-                );
-            }
-        }
-
         ReactDOM.render(
-            <Provider store={store}>
+            <ReactRedux.Provider store={store}>
                 <ConnectedApp />
-            </Provider>,
+            </ReactRedux.Provider>,
             
             document.getElementById('app')
         )
